// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: anonymous users 1`] = `
<NavBar
  className="navbar-global"
  height={48}
  id="global-navigation"
>
  <withAppStateContext(GlobalNavBranding) />
  <withAppStateContext(GlobalNavMenu)
    currentUser={
      {
        "dismissedNotices": {},
        "isLoggedIn": false,
      }
    }
    location={
      {
        "pathname": "",
      }
    }
  />
  <div
    className="global-navbar-menu global-navbar-menu-right"
  >
    <EmbedDocsPopupHelper />
    <withRouter(Search) />
    <withRouter(GlobalNavUser)
      currentUser={
        {
          "dismissedNotices": {},
          "isLoggedIn": false,
        }
      }
    />
  </div>
</NavBar>
`;

exports[`should render correctly: logged in users 1`] = `
<NavBar
  className="navbar-global"
  height={48}
  id="global-navigation"
>
  <withAppStateContext(GlobalNavBranding) />
  <withAppStateContext(GlobalNavMenu)
    currentUser={
      {
        "isLoggedIn": true,
      }
    }
    location={
      {
        "pathname": "",
      }
    }
  />
  <div
    className="global-navbar-menu global-navbar-menu-right"
  >
    <EmbedDocsPopupHelper />
    <withRouter(Search) />
    <withRouter(GlobalNavUser)
      currentUser={
        {
          "isLoggedIn": true,
        }
      }
    />
  </div>
</NavBar>
`;
